fix 代码安全问题